--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       RUNDECK_GRAILS_URL: "https://rundeck.your-org.com"
       RUNDECK_SERVER_ADDRESS: 0.0.0.0
       RUNDECK_SERVER_FORWARDED: "true"
-      RUNDECK_DATABASE_DRIVER: com.mysql.jdbc.Driver
+      RUNDECK_DATABASE_DRIVER: org.mariadb.jdbc.Driver
       RUNDECK_DATABASE_USERNAME: rundeck
       RUNDECK_DATABASE_PASSWORD: rundeck
       RUNDECK_DATABASE_URL: jdbc:mysql://mysql/rundeck?autoReconnect=true&useSSL=false
@@ -29,7 +29,7 @@ services:
       - ${RUNDECK_LICENSE_FILE:-/dev/null}:/home/rundeck/etc/rundeckpro-license.key
   mysql:
     container_name: mysql
-    image: mysql:8.0
+    image: mysql:5.7
     expose:
       - 3306
     environment:
@@ -37,17 +37,10 @@ services:
       - MYSQL_DATABASE=rundeck
       - MYSQL_USER=rundeck
       - MYSQL_PASSWORD=rundeck
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin
     volumes:
       - dbdata:/var/lib/mysql
 
 volumes:
   data:
-    driver_opts:
-      type: none
-      device: /home/ubuntu/volumes/data
-      o: bind
   dbdata:
-    driver_opts:
-      type: none
-      device: /home/ubuntu/volumes/dbdata
-      o: bind
